--- a/archives/toutiao-search/2024-04-18.md
+++ b/archives/toutiao-search/2024-04-18.md
@@ -1,54 +1,71 @@
 # 2024-04-18
 
-共 305 条
+共 320 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Apr 18 2024 19:00:39 GMT+0800 (China Standard Time) -->
-1. [雷军回应“发布会着装模仿马斯克”](https://so.toutiao.com/search?keyword=雷军回应“发布会着装模仿马斯克”)
-1. [外交部：欢迎美国国务卿布林肯访华](https://so.toutiao.com/search?keyword=外交部：欢迎美国国务卿布林肯访华)
-1. [春日颜值变经济产值](https://so.toutiao.com/search?keyword=春日颜值变经济产值)
+<!-- 最后更新时间 Thu Apr 18 2024 20:09:16 GMT+0800 (China Standard Time) -->
 1. [美媒称以色列考虑有限打击伊朗领土](https://so.toutiao.com/search?keyword=美媒称以色列考虑有限打击伊朗领土)
-1. [央行原副行长范一飞受贿3.86亿受审](https://so.toutiao.com/search?keyword=央行原副行长范一飞受贿3.86亿受审)
+1. [雷军回应“发布会着装模仿马斯克”](https://so.toutiao.com/search?keyword=雷军回应“发布会着装模仿马斯克”)
+1. [春日颜值变经济产值](https://so.toutiao.com/search?keyword=春日颜值变经济产值)
+1. [外交部：欢迎美国国务卿布林肯访华](https://so.toutiao.com/search?keyword=外交部：欢迎美国国务卿布林肯访华)
+1. [美方返还中方38件文物 外交部回应](https://so.toutiao.com/search?keyword=美方返还中方38件文物+外交部回应)
 1. [81岁大爷以25元的价格嫖娼被处罚](https://so.toutiao.com/search?keyword=81岁大爷以25元的价格嫖娼被处罚)
 1. [亚洲货币“保卫战”开启](https://so.toutiao.com/search?keyword=亚洲货币“保卫战”开启)
-1. [拜登叫嚣美不领导世界还有谁能领导](https://so.toutiao.com/search?keyword=拜登叫嚣美不领导世界还有谁能领导)
+1. [美菲军演将击沉中国制造的菲补给舰](https://so.toutiao.com/search?keyword=美菲军演将击沉中国制造的菲补给舰)
 1. [女生早操猝死 涉事教师资格被撤销](https://so.toutiao.com/search?keyword=女生早操猝死+涉事教师资格被撤销)
 1. [马斯克连续第三年零薪零酬](https://so.toutiao.com/search?keyword=马斯克连续第三年零薪零酬)
 1. [反对调休的声音不能装作听不到](https://so.toutiao.com/search?keyword=反对调休的声音不能装作听不到)
-1. [南宁楼房倒塌人像饺子往下掉？假的](https://so.toutiao.com/search?keyword=南宁楼房倒塌人像饺子往下掉？假的)
+1. [“福州发生航空器安全事故”不实](https://so.toutiao.com/search?keyword=“福州发生航空器安全事故”不实)
 1. [专家鼓励买下铺的年轻人跟老人换位](https://so.toutiao.com/search?keyword=专家鼓励买下铺的年轻人跟老人换位)
+1. [央行原副行长范一飞受贿3.86亿受审](https://so.toutiao.com/search?keyword=央行原副行长范一飞受贿3.86亿受审)
+1. [雷军：女生买小米SU7最喜欢霞光紫](https://so.toutiao.com/search?keyword=雷军：女生买小米SU7最喜欢霞光紫)
 1. [姑父强奸猥亵侄女7年被判十三年](https://so.toutiao.com/search?keyword=姑父强奸猥亵侄女7年被判十三年)
-1. [美菲军演将击沉中国制造的菲补给舰](https://so.toutiao.com/search?keyword=美菲军演将击沉中国制造的菲补给舰)
-1. [专家：乌克兰颓势明显邻国密谋瓜分](https://so.toutiao.com/search?keyword=专家：乌克兰颓势明显邻国密谋瓜分)
-1. [冯德莱恩演讲时被亲巴抗议者打断](https://so.toutiao.com/search?keyword=冯德莱恩演讲时被亲巴抗议者打断)
-1. [实拍广州暴雨瞬间白昼变夜晚](https://so.toutiao.com/search?keyword=实拍广州暴雨瞬间白昼变夜晚)
-1. [11岁男孩被教训后举报爷爷有枪](https://so.toutiao.com/search?keyword=11岁男孩被教训后举报爷爷有枪)
-1. [特斯拉被裁员工：满意赔偿标准](https://so.toutiao.com/search?keyword=特斯拉被裁员工：满意赔偿标准)
-1. [15位中央巡视组组长全部亮相](https://so.toutiao.com/search?keyword=15位中央巡视组组长全部亮相)
 1. [网友：五一不是放假而是假放](https://so.toutiao.com/search?keyword=网友：五一不是放假而是假放)
+1. [小女孩用一根手指吹出响声](https://so.toutiao.com/search?keyword=小女孩用一根手指吹出响声)
+1. [沙漠变泽国：阿联酋遭遇罕见暴雨](https://so.toutiao.com/search?keyword=沙漠变泽国：阿联酋遭遇罕见暴雨)
+1. [实拍广州暴雨瞬间白昼变夜晚](https://so.toutiao.com/search?keyword=实拍广州暴雨瞬间白昼变夜晚)
+1. [冯德莱恩演讲时被亲巴抗议者打断](https://so.toutiao.com/search?keyword=冯德莱恩演讲时被亲巴抗议者打断)
+1. [男子酒后骚扰女孩还打家长](https://so.toutiao.com/search?keyword=男子酒后骚扰女孩还打家长)
+1. [11岁男孩被教训后举报爷爷有枪](https://so.toutiao.com/search?keyword=11岁男孩被教训后举报爷爷有枪)
+1. [外国客商纷纷点赞广交会](https://so.toutiao.com/search?keyword=外国客商纷纷点赞广交会)
+1. [卧铺挂帘当事人：老人没沟通直接骂](https://so.toutiao.com/search?keyword=卧铺挂帘当事人：老人没沟通直接骂)
+1. [日元对人民币汇率创近年来新低](https://so.toutiao.com/search?keyword=日元对人民币汇率创近年来新低)
+1. [雷军：低谷时卡里没有冰冷的40亿](https://so.toutiao.com/search?keyword=雷军：低谷时卡里没有冰冷的40亿)
+1. [美军在菲部署中程导弹 外交部回应](https://so.toutiao.com/search?keyword=美军在菲部署中程导弹+外交部回应)
+1. [福州体育中考在大雨中进行](https://so.toutiao.com/search?keyword=福州体育中考在大雨中进行)
+1. [央媒评体育馆禁群众入内：为谁而建](https://so.toutiao.com/search?keyword=央媒评体育馆禁群众入内：为谁而建)
+1. [专家：乌克兰颓势明显邻国密谋瓜分](https://so.toutiao.com/search?keyword=专家：乌克兰颓势明显邻国密谋瓜分)
+1. [曾带火景区的网红们现在怎么样了](https://so.toutiao.com/search?keyword=曾带火景区的网红们现在怎么样了)
+1. [福建舰舰载机“全家福”亮相](https://so.toutiao.com/search?keyword=福建舰舰载机“全家福”亮相)
+1. [15位中央巡视组组长全部亮相](https://so.toutiao.com/search?keyword=15位中央巡视组组长全部亮相)
+1. [拜登叫嚣美不领导世界还有谁能领导](https://so.toutiao.com/search?keyword=拜登叫嚣美不领导世界还有谁能领导)
+1. [美菲军演规模超去年 将演练夺岛](https://so.toutiao.com/search?keyword=美菲军演规模超去年+将演练夺岛)
+1. [马斯克财富蒸发超1万亿](https://so.toutiao.com/search?keyword=马斯克财富蒸发超1万亿)
+1. [全红婵接受采访时“i人属性拉满”](https://so.toutiao.com/search?keyword=全红婵接受采访时“i人属性拉满”)
+1. [雷军：汽车销量比预计高了三到五倍](https://so.toutiao.com/search?keyword=雷军：汽车销量比预计高了三到五倍)
+1. [特斯拉被裁员工：满意赔偿标准](https://so.toutiao.com/search?keyword=特斯拉被裁员工：满意赔偿标准)
+1. [女子检票插队被指责后恼怒打人](https://so.toutiao.com/search?keyword=女子检票插队被指责后恼怒打人)
+1. [小米汽车SU7将参加2024北京车展](https://so.toutiao.com/search?keyword=小米汽车SU7将参加2024北京车展)
+1. [光刻机巨头阿斯麦业绩爆雷](https://so.toutiao.com/search?keyword=光刻机巨头阿斯麦业绩爆雷)
+1. [王毅：美方应放下唯我独尊的心态](https://so.toutiao.com/search?keyword=王毅：美方应放下唯我独尊的心态)
+1. [雷军：纯电轿车基本都是亏损的](https://so.toutiao.com/search?keyword=雷军：纯电轿车基本都是亏损的)
+1. [9岁男孩疑似因长期体罚跳楼身亡](https://so.toutiao.com/search?keyword=9岁男孩疑似因长期体罚跳楼身亡)
+1. [为何飑线过境天会变黑](https://so.toutiao.com/search?keyword=为何飑线过境天会变黑)
+1. [全红婵：还没有看过兵马俑](https://so.toutiao.com/search?keyword=全红婵：还没有看过兵马俑)
+1. [境外采购商在广交会关注什么](https://so.toutiao.com/search?keyword=境外采购商在广交会关注什么)
+1. [以色列遭火箭弹袭击致多人伤亡](https://so.toutiao.com/search?keyword=以色列遭火箭弹袭击致多人伤亡)
+1. [南宁楼房倒塌人像饺子往下掉？假的](https://so.toutiao.com/search?keyword=南宁楼房倒塌人像饺子往下掉？假的)
 1. [小米SU7上市20天后雷军首次直播](https://so.toutiao.com/search?keyword=小米SU7上市20天后雷军首次直播)
 1. [肺癌再成深圳最高发恶性肿瘤](https://so.toutiao.com/search?keyword=肺癌再成深圳最高发恶性肿瘤)
-1. [卧铺挂帘当事人：老人没沟通直接骂](https://so.toutiao.com/search?keyword=卧铺挂帘当事人：老人没沟通直接骂)
-1. [央媒评体育馆禁群众入内：为谁而建](https://so.toutiao.com/search?keyword=央媒评体育馆禁群众入内：为谁而建)
 1. [周鸿祎要卖迈巴赫买国产新能源车](https://so.toutiao.com/search?keyword=周鸿祎要卖迈巴赫买国产新能源车)
-1. [美军在菲部署中程导弹 外交部回应](https://so.toutiao.com/search?keyword=美军在菲部署中程导弹+外交部回应)
-1. [女子检票插队被指责后恼怒打人](https://so.toutiao.com/search?keyword=女子检票插队被指责后恼怒打人)
-1. [以色列遭火箭弹袭击致多人伤亡](https://so.toutiao.com/search?keyword=以色列遭火箭弹袭击致多人伤亡)
 1. [马斯克回应部分被裁员工遣散费过低](https://so.toutiao.com/search?keyword=马斯克回应部分被裁员工遣散费过低)
 1. [广州市教育局回应体育中考遇暴雨](https://so.toutiao.com/search?keyword=广州市教育局回应体育中考遇暴雨)
-1. [光刻机巨头阿斯麦业绩爆雷](https://so.toutiao.com/search?keyword=光刻机巨头阿斯麦业绩爆雷)
-1. [男子酒后骚扰女孩还打家长](https://so.toutiao.com/search?keyword=男子酒后骚扰女孩还打家长)
 1. [傅崐萁洪秀柱将接续访陆意味着什么](https://so.toutiao.com/search?keyword=傅崐萁洪秀柱将接续访陆意味着什么)
 1. [高铁上大妈把行李箱放身旁堵住过道](https://so.toutiao.com/search?keyword=高铁上大妈把行李箱放身旁堵住过道)
-1. [福建舰舰载机“全家福”亮相](https://so.toutiao.com/search?keyword=福建舰舰载机“全家福”亮相)
 1. [“开封王婆”江西说媒首日促成多对](https://so.toutiao.com/search?keyword=“开封王婆”江西说媒首日促成多对)
-1. [9岁男孩疑似因长期体罚跳楼身亡](https://so.toutiao.com/search?keyword=9岁男孩疑似因长期体罚跳楼身亡)
 1. [浙江已有2个老旧小区推倒重建](https://so.toutiao.com/search?keyword=浙江已有2个老旧小区推倒重建)
 1. [周海媚墓地公布 安葬在北京](https://so.toutiao.com/search?keyword=周海媚墓地公布+安葬在北京)
-1. [全红婵接受采访时“i人属性拉满”](https://so.toutiao.com/search?keyword=全红婵接受采访时“i人属性拉满”)
 1. [高校运动会小马驹嗨翻全场实力抢镜](https://so.toutiao.com/search?keyword=高校运动会小马驹嗨翻全场实力抢镜)
-1. [雷军：低谷时卡里没有冰冷的40亿](https://so.toutiao.com/search?keyword=雷军：低谷时卡里没有冰冷的40亿)
-1. [马斯克财富蒸发超1万亿](https://so.toutiao.com/search?keyword=马斯克财富蒸发超1万亿)
 1. [9岁男孩校门口被同学家长殴打住院](https://so.toutiao.com/search?keyword=9岁男孩校门口被同学家长殴打住院)
 1. [二本女孩跨专业考研上岸双一流](https://so.toutiao.com/search?keyword=二本女孩跨专业考研上岸双一流)
 1. [美国返还的38件文物艺术品出自哪里](https://so.toutiao.com/search?keyword=美国返还的38件文物艺术品出自哪里)
@@ -59,8 +76,6 @@
 1. [王毅：美没有不遵守国际法“特权”](https://so.toutiao.com/search?keyword=王毅：美没有不遵守国际法“特权”)
 1. [对话被丈夫割喉杀害女子家属](https://so.toutiao.com/search?keyword=对话被丈夫割喉杀害女子家属)
 1. [驻日领馆提醒中国公民注意防范余震](https://so.toutiao.com/search?keyword=驻日领馆提醒中国公民注意防范余震)
-1. [为何飑线过境天会变黑](https://so.toutiao.com/search?keyword=为何飑线过境天会变黑)
-1. [小女孩用一根手指吹出响声](https://so.toutiao.com/search?keyword=小女孩用一根手指吹出响声)
 1. [男子被查酒驾自称是纪委的人遭怼](https://so.toutiao.com/search?keyword=男子被查酒驾自称是纪委的人遭怼)
 1. [提灯定损被注册为企业名](https://so.toutiao.com/search?keyword=提灯定损被注册为企业名)
 1. [中国人亲历迪拜暴雨：酒店厨房被淹](https://so.toutiao.com/search?keyword=中国人亲历迪拜暴雨：酒店厨房被淹)
