--- a/archives/toutiao-search/2024-04-18.md
+++ b/archives/toutiao-search/2024-04-18.md
@@ -1,54 +1,71 @@
 # 2024-04-18
 
-共 320 条
+共 332 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Apr 18 2024 20:09:16 GMT+0800 (China Standard Time) -->
-1. [美媒称以色列考虑有限打击伊朗领土](https://so.toutiao.com/search?keyword=美媒称以色列考虑有限打击伊朗领土)
+<!-- 最后更新时间 Thu Apr 18 2024 21:02:19 GMT+0800 (China Standard Time) -->
+1. [外交部：欢迎美国国务卿布林肯访华](https://so.toutiao.com/search?keyword=外交部：欢迎美国国务卿布林肯访华)
 1. [雷军回应“发布会着装模仿马斯克”](https://so.toutiao.com/search?keyword=雷军回应“发布会着装模仿马斯克”)
 1. [春日颜值变经济产值](https://so.toutiao.com/search?keyword=春日颜值变经济产值)
-1. [外交部：欢迎美国国务卿布林肯访华](https://so.toutiao.com/search?keyword=外交部：欢迎美国国务卿布林肯访华)
-1. [美方返还中方38件文物 外交部回应](https://so.toutiao.com/search?keyword=美方返还中方38件文物+外交部回应)
-1. [81岁大爷以25元的价格嫖娼被处罚](https://so.toutiao.com/search?keyword=81岁大爷以25元的价格嫖娼被处罚)
-1. [亚洲货币“保卫战”开启](https://so.toutiao.com/search?keyword=亚洲货币“保卫战”开启)
-1. [美菲军演将击沉中国制造的菲补给舰](https://so.toutiao.com/search?keyword=美菲军演将击沉中国制造的菲补给舰)
-1. [女生早操猝死 涉事教师资格被撤销](https://so.toutiao.com/search?keyword=女生早操猝死+涉事教师资格被撤销)
-1. [马斯克连续第三年零薪零酬](https://so.toutiao.com/search?keyword=马斯克连续第三年零薪零酬)
-1. [反对调休的声音不能装作听不到](https://so.toutiao.com/search?keyword=反对调休的声音不能装作听不到)
-1. [“福州发生航空器安全事故”不实](https://so.toutiao.com/search?keyword=“福州发生航空器安全事故”不实)
-1. [专家鼓励买下铺的年轻人跟老人换位](https://so.toutiao.com/search?keyword=专家鼓励买下铺的年轻人跟老人换位)
-1. [央行原副行长范一飞受贿3.86亿受审](https://so.toutiao.com/search?keyword=央行原副行长范一飞受贿3.86亿受审)
-1. [雷军：女生买小米SU7最喜欢霞光紫](https://so.toutiao.com/search?keyword=雷军：女生买小米SU7最喜欢霞光紫)
-1. [姑父强奸猥亵侄女7年被判十三年](https://so.toutiao.com/search?keyword=姑父强奸猥亵侄女7年被判十三年)
-1. [网友：五一不是放假而是假放](https://so.toutiao.com/search?keyword=网友：五一不是放假而是假放)
-1. [小女孩用一根手指吹出响声](https://so.toutiao.com/search?keyword=小女孩用一根手指吹出响声)
-1. [沙漠变泽国：阿联酋遭遇罕见暴雨](https://so.toutiao.com/search?keyword=沙漠变泽国：阿联酋遭遇罕见暴雨)
+1. [美媒称以色列考虑有限打击伊朗领土](https://so.toutiao.com/search?keyword=美媒称以色列考虑有限打击伊朗领土)
 1. [实拍广州暴雨瞬间白昼变夜晚](https://so.toutiao.com/search?keyword=实拍广州暴雨瞬间白昼变夜晚)
+1. [81岁大爷以25元的价格嫖娼被处罚](https://so.toutiao.com/search?keyword=81岁大爷以25元的价格嫖娼被处罚)
+1. [美方返还中方38件文物 外交部回应](https://so.toutiao.com/search?keyword=美方返还中方38件文物+外交部回应)
+1. [美媒：中国不是美国可拥有或指挥的](https://so.toutiao.com/search?keyword=美媒：中国不是美国可拥有或指挥的)
+1. [万达电影新老板曾押中多部爆款剧](https://so.toutiao.com/search?keyword=万达电影新老板曾押中多部爆款剧)
+1. [美菲军演将击沉中国制造的菲补给舰](https://so.toutiao.com/search?keyword=美菲军演将击沉中国制造的菲补给舰)
+1. [胡歌红毯推游本昌轮椅入场](https://so.toutiao.com/search?keyword=胡歌红毯推游本昌轮椅入场)
+1. [“福州发生航空器安全事故”不实](https://so.toutiao.com/search?keyword=“福州发生航空器安全事故”不实)
 1. [冯德莱恩演讲时被亲巴抗议者打断](https://so.toutiao.com/search?keyword=冯德莱恩演讲时被亲巴抗议者打断)
+1. [雷军直播霸总式出场](https://so.toutiao.com/search?keyword=雷军直播霸总式出场)
+1. [网友：五一不是放假而是假放](https://so.toutiao.com/search?keyword=网友：五一不是放假而是假放)
+1. [姑父强奸猥亵侄女7年被判十三年](https://so.toutiao.com/search?keyword=姑父强奸猥亵侄女7年被判十三年)
+1. [澳门国际乒联世界杯王曼昱晋级8强](https://so.toutiao.com/search?keyword=澳门国际乒联世界杯王曼昱晋级8强)
+1. [反对调休的声音不能装作听不到](https://so.toutiao.com/search?keyword=反对调休的声音不能装作听不到)
+1. [专家鼓励买下铺的年轻人跟老人换位](https://so.toutiao.com/search?keyword=专家鼓励买下铺的年轻人跟老人换位)
+1. [陈梦晋级女单八强](https://so.toutiao.com/search?keyword=陈梦晋级女单八强)
 1. [男子酒后骚扰女孩还打家长](https://so.toutiao.com/search?keyword=男子酒后骚扰女孩还打家长)
-1. [11岁男孩被教训后举报爷爷有枪](https://so.toutiao.com/search?keyword=11岁男孩被教训后举报爷爷有枪)
-1. [外国客商纷纷点赞广交会](https://so.toutiao.com/search?keyword=外国客商纷纷点赞广交会)
-1. [卧铺挂帘当事人：老人没沟通直接骂](https://so.toutiao.com/search?keyword=卧铺挂帘当事人：老人没沟通直接骂)
-1. [日元对人民币汇率创近年来新低](https://so.toutiao.com/search?keyword=日元对人民币汇率创近年来新低)
-1. [雷军：低谷时卡里没有冰冷的40亿](https://so.toutiao.com/search?keyword=雷军：低谷时卡里没有冰冷的40亿)
-1. [美军在菲部署中程导弹 外交部回应](https://so.toutiao.com/search?keyword=美军在菲部署中程导弹+外交部回应)
-1. [福州体育中考在大雨中进行](https://so.toutiao.com/search?keyword=福州体育中考在大雨中进行)
+1. [货车发生侧翻压扁轿车](https://so.toutiao.com/search?keyword=货车发生侧翻压扁轿车)
 1. [央媒评体育馆禁群众入内：为谁而建](https://so.toutiao.com/search?keyword=央媒评体育馆禁群众入内：为谁而建)
+1. [女生早操猝死 涉事教师资格被撤销](https://so.toutiao.com/search?keyword=女生早操猝死+涉事教师资格被撤销)
+1. [央行原副行长范一飞受贿3.86亿受审](https://so.toutiao.com/search?keyword=央行原副行长范一飞受贿3.86亿受审)
+1. [11岁男孩被教训后举报爷爷有枪](https://so.toutiao.com/search?keyword=11岁男孩被教训后举报爷爷有枪)
+1. [雷军：女生买小米SU7最喜欢霞光紫](https://so.toutiao.com/search?keyword=雷军：女生买小米SU7最喜欢霞光紫)
+1. [小女孩用一根手指吹出响声](https://so.toutiao.com/search?keyword=小女孩用一根手指吹出响声)
+1. [女子检票插队被指责后恼怒打人](https://so.toutiao.com/search?keyword=女子检票插队被指责后恼怒打人)
+1. [美称将加强中东地区导弹防御和预警](https://so.toutiao.com/search?keyword=美称将加强中东地区导弹防御和预警)
 1. [专家：乌克兰颓势明显邻国密谋瓜分](https://so.toutiao.com/search?keyword=专家：乌克兰颓势明显邻国密谋瓜分)
-1. [曾带火景区的网红们现在怎么样了](https://so.toutiao.com/search?keyword=曾带火景区的网红们现在怎么样了)
-1. [福建舰舰载机“全家福”亮相](https://so.toutiao.com/search?keyword=福建舰舰载机“全家福”亮相)
-1. [15位中央巡视组组长全部亮相](https://so.toutiao.com/search?keyword=15位中央巡视组组长全部亮相)
-1. [拜登叫嚣美不领导世界还有谁能领导](https://so.toutiao.com/search?keyword=拜登叫嚣美不领导世界还有谁能领导)
-1. [美菲军演规模超去年 将演练夺岛](https://so.toutiao.com/search?keyword=美菲军演规模超去年+将演练夺岛)
+1. [美军在菲部署中程导弹 外交部回应](https://so.toutiao.com/search?keyword=美军在菲部署中程导弹+外交部回应)
+1. [伊朗总统在阅兵式上喊话以色列](https://so.toutiao.com/search?keyword=伊朗总统在阅兵式上喊话以色列)
 1. [马斯克财富蒸发超1万亿](https://so.toutiao.com/search?keyword=马斯克财富蒸发超1万亿)
+1. [假期调休难题如何破局](https://so.toutiao.com/search?keyword=假期调休难题如何破局)
+1. [酒店瓶装水被扎小孔](https://so.toutiao.com/search?keyword=酒店瓶装水被扎小孔)
+1. [全红婵在西安当起“教练”](https://so.toutiao.com/search?keyword=全红婵在西安当起“教练”)
+1. [15位中央巡视组组长全部亮相](https://so.toutiao.com/search?keyword=15位中央巡视组组长全部亮相)
+1. [福建舰舰载机“全家福”亮相](https://so.toutiao.com/search?keyword=福建舰舰载机“全家福”亮相)
+1. [雷军：纯电轿车基本都是亏损的](https://so.toutiao.com/search?keyword=雷军：纯电轿车基本都是亏损的)
+1. [日元对人民币汇率创近年来新低](https://so.toutiao.com/search?keyword=日元对人民币汇率创近年来新低)
+1. [罕见超长飑线横扫广东](https://so.toutiao.com/search?keyword=罕见超长飑线横扫广东)
+1. [周海媚墓地公布 安葬在北京](https://so.toutiao.com/search?keyword=周海媚墓地公布+安葬在北京)
+1. [沙漠变泽国：阿联酋遭遇罕见暴雨](https://so.toutiao.com/search?keyword=沙漠变泽国：阿联酋遭遇罕见暴雨)
+1. [英国拟禁止2009年及以后出生者购烟](https://so.toutiao.com/search?keyword=英国拟禁止2009年及以后出生者购烟)
+1. [卧铺挂帘当事人：老人没沟通直接骂](https://so.toutiao.com/search?keyword=卧铺挂帘当事人：老人没沟通直接骂)
+1. [人民币连续多月成全球第四支付货币](https://so.toutiao.com/search?keyword=人民币连续多月成全球第四支付货币)
+1. [北京一皇家级四合院4.5亿元起拍](https://so.toutiao.com/search?keyword=北京一皇家级四合院4.5亿元起拍)
 1. [全红婵接受采访时“i人属性拉满”](https://so.toutiao.com/search?keyword=全红婵接受采访时“i人属性拉满”)
+1. [拜登叫嚣美不领导世界还有谁能领导](https://so.toutiao.com/search?keyword=拜登叫嚣美不领导世界还有谁能领导)
+1. [亚洲货币“保卫战”开启](https://so.toutiao.com/search?keyword=亚洲货币“保卫战”开启)
+1. [马斯克连续第三年零薪零酬](https://so.toutiao.com/search?keyword=马斯克连续第三年零薪零酬)
+1. [外国客商纷纷点赞广交会](https://so.toutiao.com/search?keyword=外国客商纷纷点赞广交会)
+1. [雷军：低谷时卡里没有冰冷的40亿](https://so.toutiao.com/search?keyword=雷军：低谷时卡里没有冰冷的40亿)
+1. [福州体育中考在大雨中进行](https://so.toutiao.com/search?keyword=福州体育中考在大雨中进行)
+1. [曾带火景区的网红们现在怎么样了](https://so.toutiao.com/search?keyword=曾带火景区的网红们现在怎么样了)
+1. [美菲军演规模超去年 将演练夺岛](https://so.toutiao.com/search?keyword=美菲军演规模超去年+将演练夺岛)
 1. [雷军：汽车销量比预计高了三到五倍](https://so.toutiao.com/search?keyword=雷军：汽车销量比预计高了三到五倍)
 1. [特斯拉被裁员工：满意赔偿标准](https://so.toutiao.com/search?keyword=特斯拉被裁员工：满意赔偿标准)
-1. [女子检票插队被指责后恼怒打人](https://so.toutiao.com/search?keyword=女子检票插队被指责后恼怒打人)
 1. [小米汽车SU7将参加2024北京车展](https://so.toutiao.com/search?keyword=小米汽车SU7将参加2024北京车展)
 1. [光刻机巨头阿斯麦业绩爆雷](https://so.toutiao.com/search?keyword=光刻机巨头阿斯麦业绩爆雷)
 1. [王毅：美方应放下唯我独尊的心态](https://so.toutiao.com/search?keyword=王毅：美方应放下唯我独尊的心态)
-1. [雷军：纯电轿车基本都是亏损的](https://so.toutiao.com/search?keyword=雷军：纯电轿车基本都是亏损的)
 1. [9岁男孩疑似因长期体罚跳楼身亡](https://so.toutiao.com/search?keyword=9岁男孩疑似因长期体罚跳楼身亡)
 1. [为何飑线过境天会变黑](https://so.toutiao.com/search?keyword=为何飑线过境天会变黑)
 1. [全红婵：还没有看过兵马俑](https://so.toutiao.com/search?keyword=全红婵：还没有看过兵马俑)
@@ -64,7 +81,6 @@
 1. [高铁上大妈把行李箱放身旁堵住过道](https://so.toutiao.com/search?keyword=高铁上大妈把行李箱放身旁堵住过道)
 1. [“开封王婆”江西说媒首日促成多对](https://so.toutiao.com/search?keyword=“开封王婆”江西说媒首日促成多对)
 1. [浙江已有2个老旧小区推倒重建](https://so.toutiao.com/search?keyword=浙江已有2个老旧小区推倒重建)
-1. [周海媚墓地公布 安葬在北京](https://so.toutiao.com/search?keyword=周海媚墓地公布+安葬在北京)
 1. [高校运动会小马驹嗨翻全场实力抢镜](https://so.toutiao.com/search?keyword=高校运动会小马驹嗨翻全场实力抢镜)
 1. [9岁男孩校门口被同学家长殴打住院](https://so.toutiao.com/search?keyword=9岁男孩校门口被同学家长殴打住院)
 1. [二本女孩跨专业考研上岸双一流](https://so.toutiao.com/search?keyword=二本女孩跨专业考研上岸双一流)
@@ -72,7 +88,6 @@
 1. [囤日元当理财在年轻人中“火”了](https://so.toutiao.com/search?keyword=囤日元当理财在年轻人中“火”了)
 1. [小米SU7正式版已开启交付](https://so.toutiao.com/search?keyword=小米SU7正式版已开启交付)
 1. [A股收评：沪指冲高回落微涨](https://so.toutiao.com/search?keyword=A股收评：沪指冲高回落微涨)
-1. [罕见超长飑线横扫广东](https://so.toutiao.com/search?keyword=罕见超长飑线横扫广东)
 1. [王毅：美没有不遵守国际法“特权”](https://so.toutiao.com/search?keyword=王毅：美没有不遵守国际法“特权”)
 1. [对话被丈夫割喉杀害女子家属](https://so.toutiao.com/search?keyword=对话被丈夫割喉杀害女子家属)
 1. [驻日领馆提醒中国公民注意防范余震](https://so.toutiao.com/search?keyword=驻日领馆提醒中国公民注意防范余震)
@@ -92,7 +107,6 @@
 1. [美媒称以色列考虑有限打击伊朗领士](https://so.toutiao.com/search?keyword=美媒称以色列考虑有限打击伊朗领士)
 1. [官方通报女子因带娃被公公扇耳光](https://so.toutiao.com/search?keyword=官方通报女子因带娃被公公扇耳光)
 1. [81岁大爷以25元的价格嫖娼被行拘](https://so.toutiao.com/search?keyword=81岁大爷以25元的价格嫖娼被行拘)
-1. [万达电影新老板曾押中多部爆款剧](https://so.toutiao.com/search?keyword=万达电影新老板曾押中多部爆款剧)
 1. [金价大涨背后将是通胀时代吗](https://so.toutiao.com/search?keyword=金价大涨背后将是通胀时代吗)
 1. [女生打1块钱麻将输400块被气哭](https://so.toutiao.com/search?keyword=女生打1块钱麻将输400块被气哭)
 1. [曝美施压巴勒斯坦要求放弃入联被拒](https://so.toutiao.com/search?keyword=曝美施压巴勒斯坦要求放弃入联被拒)
@@ -108,7 +122,6 @@
 1. [专家：伊朗报复行动总体克制](https://so.toutiao.com/search?keyword=专家：伊朗报复行动总体克制)
 1. [男生被噎住 同桌用海姆立克法施救](https://so.toutiao.com/search?keyword=男生被噎住+同桌用海姆立克法施救)
 1. [居民爆料2名青少年持刀街头堵人](https://so.toutiao.com/search?keyword=居民爆料2名青少年持刀街头堵人)
-1. [伊朗总统在阅兵式上喊话以色列](https://so.toutiao.com/search?keyword=伊朗总统在阅兵式上喊话以色列)
 1. [中方支持巴勒斯坦正式加入联合国](https://so.toutiao.com/search?keyword=中方支持巴勒斯坦正式加入联合国)
 1. [以称将自己决定如何回应伊朗的袭击](https://so.toutiao.com/search?keyword=以称将自己决定如何回应伊朗的袭击)
 1. [南京熟食店闪爆致3人受伤](https://so.toutiao.com/search?keyword=南京熟食店闪爆致3人受伤)
@@ -118,7 +131,6 @@
 1. [钟南山发文悼念沈华浩](https://so.toutiao.com/search?keyword=钟南山发文悼念沈华浩)
 1. [掘金主帅：我们连续两年横扫湖人](https://so.toutiao.com/search?keyword=掘金主帅：我们连续两年横扫湖人)
 1. [专访武王墩墓出土文物幕后保护团队](https://so.toutiao.com/search?keyword=专访武王墩墓出土文物幕后保护团队)
-1. [美称将加强中东地区导弹防御和预警](https://so.toutiao.com/search?keyword=美称将加强中东地区导弹防御和预警)
 1. [新款问界M5预售12小时订单破万](https://so.toutiao.com/search?keyword=新款问界M5预售12小时订单破万)
 1. [公牛擒老鹰 将同热火争季后赛资格](https://so.toutiao.com/search?keyword=公牛擒老鹰+将同热火争季后赛资格)
 1. [中国2月持有美国国债减少227亿美元](https://so.toutiao.com/search?keyword=中国2月持有美国国债减少227亿美元)
